# wenet_change

runtime/: hotwords_test_wavlist_8k_or_16k.sh  multi_pro_test.sh  multi_pro_test_8k.sh  multi_pro_test_8k_or_16k.sh
runtime/core/decoder/: CMakeLists.txt  asr_decoder.cc  asr_decoder.h  context_graph.cc  context_graph.h  ctc_prefix_beam_search.cc  ctc_prefix_beam_search.h  hw_scorer.cc  hw_scorer.h  p2.h  params.h  torch_asr_model.cc  torch_asr_model.h
runtime/core/frontend/: CMakeLists.txt  wav2.h
runtime/core/kaldi/util/: basic-filebuf.h
runtime/core/websocket/: CMakeLists.txt  websocket_client.cc  websocket_client.h  websocket_server.cc  websocket_server.h
runtime/libtorch/: .gitignore  README.md  client.cpp  client_start.sh  conbined_text  get_wer.sh  hot_word_dir_hot12  hot_word_dir_hot39  hotwords_test_wavlist.sh  hotwords_test_wavlist_eng-am.sh  out_log  path.sh  result  server.cpp  server_start.sh  server_start_eng-man.sh  test.py  utils_kaldi  wer  wer_old  wer_wo_hot
runtime/libtorch/bpe_model/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  bpe_cut.py  bpe_cut.sh  bpe_cut2.py  bpe_cut_test.py  calculator.py  call_python  cmake_install.cmake  main.py  test  test.cpp  train_unigram5000.model
runtime/libtorch/bpe_model/src/: call_python.cpp
runtime/libtorch/hot_word_dir/: hot1  hot2  hot3
runtime/libtorch/hot_word_dir_old/: hot1  hot3  hot5
runtime/libtorch/tools/: compute-wer.py  segment_cut.py
